k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-native-health-monitor
  labels:
    app: health-monitor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-monitor
  template:
    metadata:
      labels:
        app: health-monitor
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: health-monitor
          image: 471112875192.dkr.ecr.eu-central-1.amazonaws.com/cloud-native-health-monitor:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
